use custom jvm args on test jvm as well